# EzTaoX

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .zenodo.json  Changelog.rst  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: asv-main.yml  testing-and-coverage.yml  tests.yml
benchmarks/: asv.conf.json  fitting.py  simulator.py
binder/: environment.yml
docs/: about.rst  changelog.rst  conf.py  index.rst  notebooks.rst  requirements.txt
docs/_autoapi_templates/python/: class.rst
docs/notebooks/: 01_DRW.ipynb  02_DHO.ipynb  02_Multiband.ipynb  03_DHO.ipynb  03_MultibandFitting.ipynb  04_MultibandSimulation.ipynb  05_TransferFunction.ipynb  README.md
docs/pre_executed/: 04_TransferFunctions.ipynb  05_DP1_LSDB.ipynb
docs/pre_executed/experimental/: 05_KernelApproximations.ipynb
scripts/: compare_fit_optimizers.py
src/eztaox/: __init__.py  fitter.py  initializers.py  kernel_stat2.py  kernel_utils.py  kernels.py  models.py  simulator.py  transfer_functions.py  ts_utils.py  utils.py
src/eztaox/kernels/: _laguerre.py  direct.py  eqx_utils.py  quasisep.py  transfer_function.py
tests/: conftest.py  test_kernel_stats.py  test_kernels.py  test_kernels_quasisep.py  test_models_quasisep.py
tests/data/: generate_data.py
tests/eztaox/: _test_laguerre.py  test_fitter.py  test_kernel_stats.py  test_kernels_quasisep.py  test_laguerre_decomposition.py  test_models_quasisep.py  test_simulator.py  test_transfer_function.py  test_ts_utils.py
tutorials/: 00_Introduction.ipynb  00_Introduction.py  01_MultibandFitting.ipynb  01_MultibandFitting.py  02_DHO.ipynb  02_DHO.py  03_DRW.ipynb  03_DRW.py
