[project]
name = "eztaox"
version = "0.1.0"
description = "TBD"
authors = [
    {name = "Weixiang Yu",email = "astro.flyfish@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "tinygp (>=0.3.0,<0.4.0)",
    "jax (<=0.4.31)",
    "jaxlib (<=0.4.31)",
    "jaxopt (>=0.8.3,<0.9.0)",
    "optax (>=0.2.4,<0.3.0)",
    "numpyro (>=0.17.0,<0.20.0)",
]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
pre-commit = "^3.5.0"
ruff = "^0.2.1"
matplotlib = "^3.3.0"
arviz = "^0.20.0"
ipywidgets = "^8.1.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
nox = "^2025.0.0"
nox-poetry = "^1.2.0"
poetry-plugin-export = "^1.8.0"
celerite = "^0.4.0"
eztao = {git = "https://github.com/ywx649999311/EzTao.git"}

[tool.poetry.group.docs.dependencies]
toml = "^0.10.2"
Sphinx = "^8.0.0"
nbsphinx = "^0.9.0"
sphinx-copybutton = "^0.5.2"

[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter="-all"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", 'I', 'W', 'UP']
ignore = [
    "E741",    # Allow ambiguous variable names
    "PLR0911", # Allow many return statements
    "PLR0913", # Allow many arguments to functions
    "PLR0915", # Allow many statements
    "PLR2004", # Allow magic numbers in comparisons
]
# exclude = ["dev/"]

[tool.ruff.format]
skip-magic-trailing-comma = false
quote-style = "double"  # Matches Black's double-quote style

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
