
[project]
name = "eztaox"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Weixiang Yu", email = "astro.flyfish@gmail.com" }
]
description = "EzTaoX is a flexible framework for multi-wavelength and multi-survey AGN light-curve modeling using Gaussian Processes (GPs). Built on top of tinygp."
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.10, <3.13"
dependencies = [
    "tinygp (>=0.3.0,<0.4.0)",
    "jax (==0.4.31)",
    "jaxlib (==0.4.31)",
    "jaxopt (>=0.8.3,<0.9.0)",
    "optax (>=0.2.4,<0.3.0)",
    "numpyro (>=0.17.0,<0.20.0)",
]

[project.urls]
"Source Code" = "https://github.com/LSST-AGN-Variability/eztaox"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "arviz",
    "asv[virtualenv]==0.6.5", # Used to compute performance benchmarks
    "eztao >= 0.5", # Used for testing against EzTao calculations that are known to be correct
    "black", # Used for static linting of files
    "jupyter", # Clears output from Jupyter notebooks
    "pre-commit", # Used to run checks before finalizing a git commit
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "ruff", # Used for static linting of files
    "joblib", # Used for parallelization in tests
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
    # "poetry-core>=2.0.0,<3.0.0"
]
build-backend = "setuptools.build_meta"
# build-backend = "poetry.core.masonry.api"
[tool.setuptools_scm]
write_to = "src/eztaox/_version.py"

[tool.poetry]
# not used for building
name = "eztaox"
version = "0.1.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.poetry.group.dev.dependencies]
# not used for building
ipykernel = "^6.29.0"
pre-commit = "^3.5.0"
ruff = "^0.15.0"
matplotlib = ">3.7.0"
arviz = "^0.20.0"
ipywidgets = "^8.1.5"
black = "^26.1.0"

[tool.poetry.group.test.dependencies]
# not used for building
pytest = "^8.0.0"
pytest-cov = "^7.1.0"
nox = "^2025.0.0"
nox-poetry = "^1.2.0"
celerite = "^0.4.0"
eztao = {git = "https://github.com/ywx649999311/EzTao.git"}
joblib = ">=1.3.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
]

[tool.pydoclint]
style = 'google'
exclude = '\.git|\.tox|tests/benchmarks'

[tool.black]
line-length = 88

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # docstrings
    "D101",
    "D102",
    "D103",
    "D106",
    "D206",
    "D207",
    "D208",
    "D300",
    "D417",
    "D419",
    # Numpy v2.0 compatibility
    "NPY201",
]
ignore = [
    "E741",    # Allow ambiguous variable names
    "PLR0911", # Allow many return statements
    "PLR0913", # Allow many arguments to functions
    "PLR0915", # Allow many statements
    "PLR2004", # Allow magic numbers in comparisons
    "UP006", # Allow non standard library generics in type hints
    "UP007", # Allow Union in type hints
    "SIM114", # Allow if with same arms
    "B028", # Allow default warning level
    "SIM117", # Allow nested with
    "UP015", # Allow redundant open parameters
    "UP028", # Allow yield in for loop
    "N803", # Argument name should be lowercase
    "N806", # Variable in function should be lowercase
    "N815", # Variable in class scope should not be mixedCase
]
exclude = ["docs/*"]

[tool.coverage.run]
omit=["src/eztaox/_version.py"]